--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <style>
     body {
-      background: black;
+      background: whitesmoke;
+    }
+    h1 {
+      text-align: center;
     }
   </style>
 <body>
